src/test/ui/borrowck/issue-45983.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-45983.rs:17:27
   |
LL |     give_any(|y| x = Some(y));
   |                           ^

error: unsatisfied lifetime constraints
  --> $DIR/issue-45983.rs:17:18
   |
LL |     let x = None;
   |         - lifetime `'2` appears in the type of `x`
LL |     give_any(|y| x = Some(y));
   |               -  ^^^^^^^^^^^ free region requires that `'1` must outlive `'2`
   |               |
   |               lifetime `'1` appears in this argument

error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/issue-45983.rs:17:18
   |
LL |     let x = None;
   |         - help: consider changing this to be mutable: `mut x`
LL |     give_any(|y| x = Some(y));
   |                  ^^^^^^^^^^^ cannot assign

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0594`.
